--- a/client/src/index.css
+++ b/client/src/index.css
@@ -1,7 +1,7 @@
-@import url('https://fonts.googleapis.com/css2?family=Poppins:wght@300;400&display=swap');
-@import url('https://fonts.googleapis.com/css2?family=Lobster&display=swap');
+@import url("https://fonts.googleapis.com/css2?family=Poppins:wght@300;400&display=swap");
+@import url("https://fonts.googleapis.com/css2?family=Lobster&display=swap");
 
-*{
+* {
   padding: 0px;
   margin: 0px;
   box-sizing: border-box;
@@ -9,20 +9,46 @@
 
 /* toggler */
 .react-toggle-track {
-    width: 56px;
-  }
-  
-  .react-toggle--checked .react-toggle-track {
-    background-color: #efefef !important;
-  }
-  
-  .react-toggle-track-check {
-    top: 9px !important;
-    font-size: 14px;
-  }
-  
-  .react-toggle-track-x {
-    top: 9px !important;
-    font-size: 15px;
-    right: 16px !important;
-  }
+  width: 56px;
+}
+
+.react-toggle--checked .react-toggle-track {
+  background-color: #efefef !important;
+}
+
+.react-toggle-track-check {
+  top: 9px !important;
+  font-size: 14px;
+}
+
+.react-toggle-track-x {
+  top: 9px !important;
+  font-size: 15px;
+  right: 16px !important;
+}
+
+.modal-content {
+  background: #25262C !important;
+  color: white !important;
+}
+
+p.side-menu-list {
+  font-size:1rem;
+  padding-left:10px;
+  cursor: pointer;
+  transition: all 0.3s;
+}
+
+p.side-menu-list:hover{
+  background: white;
+  color: #25262C;
+}
+
+h4.side-menu {
+  font-size:1.4rem;
+  font-weight:700;
+  padding-top:20px;
+  padding-bottom:10px;
+  padding-left:10px;
+  border-bottom: 1px solid #2A2C31;
+}
