code snippet modal UI complete

--- a/client/src/index.css
+++ b/client/src/index.css
@@ -99,3 +99,26 @@ h4.side-menu {
   font-size: 1.1rem;
   color: #f85125;
 }
+
+
+/* for scroll bar */
+
+/* width */
+::-webkit-scrollbar {
+  width: 10px;
+}
+
+/* Track */
+::-webkit-scrollbar-track {
+  background: #f1f1f1; 
+}
+ 
+/* Handle */
+::-webkit-scrollbar-thumb {
+  background: #888; 
+}
+
+/* Handle on hover */
+::-webkit-scrollbar-thumb:hover {
+  background: #555; 
+}
